# apsystems-ez1m-monitoring

./: Cargo.toml  LICENSE  README.md  compose.yaml
apsystems-ez1m-alarm-notifier/: Cargo.toml  Dockerfile
apsystems-ez1m-alarm-notifier/src/: config.rs  main.rs  model.rs  service.rs  templates.rs
apsystems-ez1m-dashboard/: Cargo.toml  Dockerfile
apsystems-ez1m-logger/: .gitignore  Cargo.toml  Dockerfile
apsystems-ez1m-logger/src/: config.rs  main.rs  model.rs  service.rs
apsystems-ez1m-util/: Cargo.toml
apsystems-ez1m-util/migrations/: V1__initial.sql
apsystems-ez1m-util/src/: config.rs  email.rs  lib.rs
apsystems-ez1m-util/src/db/: migration.rs  pool.rs
migrations/: v1_initial.sql
simple-dashboard/: Dockerfile  README.md  index.html  nginx.conf
src/: config.rs  main.rs  model.rs  service.rs
src/db/: migration.rs  pool.rs
utils/postman/: APsystems-EZ1-M.postman_collection.json
weather-logger/: Cargo.toml  Dockerfile
