[package]
name = "apsystems-ez1m-logger"
version = "1.0.0"
description = "APsystems EZ1-M data logger"
authors = ["Florian Straubinger <github@f-str.de>"]
license-file = "../LICENSE"
edition = "2024"


[dependencies]
apsystems-ez1m-util = { path = "../apsystems-ez1m-util" }
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio-postgres = "0.7.12"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
uuid = { version = "1.10.0", features = ["v4"] }
refinery = { version = "0.8.14", features = ["tokio-postgres"]}
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2.0.12"

