[package]
name = "apsystems-ez1m-util"
version = "1.0.0"
description = "APsystems EZ1-M utils library"
authors = ["Florian Straubinger <github@f-str.de>"]
license-file = "../LICENSE"
edition = "2021"


[dependencies]
tokio-postgres = "0.7.10"
refinery = { version = "0.8.11", features = ["tokio-postgres"]}
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
lettre = "0.11.4"
lettre_email = "0.9.4"
